# httpbox

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  Procfile  Readme.md  app.json  flake.nix  fly.toml  rustfmt.toml
.github/workflows/: container_image.yaml  deploy.yaml  release.yml  rust.yml  test.yaml
gotham_async/: Cargo.toml
gotham_async/src/: lib.rs
hyper_body/: Cargo.toml
hyper_body/src/: lib.rs
src/: args.rs  handler.rs  macros.rs  main.rs  num_cpus.rs  option.rs  path.rs  random.rs  server.rs
src/app/: auth.rs  bytes.rs  cache.rs  cookie.rs  cookies.rs  delay.rs  headers.rs  hello.rs  index.rs  ip.rs  macros.rs  method.rs  mod.rs  random.rs  redirect.rs  response.rs  router.rs  routes.rs  status_code.rs  stream.rs  user_agent.rs  util.rs
src/app/auth/: header.rs  mod.rs
src/app/method/: body.rs  mod.rs
src/app/redirect/: mod.rs  uri.rs
src/app/router/: installer.rs  mod.rs  routes.rs
src/headers/: auth.rs  cookie.rs  ip.rs  location.rs  mod.rs
src/http/: error.rs  header.rs  mod.rs  request.rs  response.rs  stream.rs
src/router/: installer.rs  mod.rs  routes.rs
src/service/: auth.rs  bytes.rs  cache.rs  cookies.rs  delay.rs  headers.rs  healthz.rs  index.rs  ip.rs  mod.rs  status_code.rs  user_agent.rs
src/service/method/: body.rs  mod.rs
src/service/redirect/: mod.rs  uri.rs
src/test/: headers.rs  mod.rs  request.rs  response.rs
templates/: base.html  index.html
uri_path/: Cargo.toml
uri_path/src/: lib.rs  macros.rs
uri_path/tests/: match_tests.rs  path_tests.rs  replace_tests.rs
