[package]
name = "httpbox"
version = "0.2.0"
edition = "2018"
rust-version = "1.80.1"
repository = "https://github.com/kevinastone/httpbox"

[[bin]]
name = "httpbox"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.27"
askama = "^0.11"
async-trait = "^0.1"
clap = { version = "^4.0.29", features = ["derive", "env"] }
clap_complete = "^4.0"
cookie = "^0.16.0"
futures = "^0.3.1"
futures-timer = "^3.0"
headers = "^0.4"
http-body-util = "0.1.0"
hyper = { version = "1.0", features = ["full"] }
hyper_body = { path = "hyper_body" }
hyper-util = { version = "0.1.1", features = [
  "server",
  "server-auto",
  "tokio",
] }
itertools = "^0.10.0"
mime = "^0.3.13"
num_cpus = "^1.13.0"
rand = { version = "^0.8", features = ["small_rng"] }
serde = "^1.0.98"
serde_derive = "^1.0.98"
serde_urlencoded = "^0.7"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tower = { version = "^0.4.12", features = ["full"] }
tower-http = { version = "^0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uri_path = { path = "uri_path" }
url = "^2.2.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
