[package]
name = "uri_path"
version = "0.1.0"
authors = ["Kevin Stone <kevinastone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.8.0"
lazy_static = "^1.2.0"
regex = "1"

[dev-dependencies]
paste = "0.1"
