[package]
name = "uri_path"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.14.0"
regex = { version = "1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
paste = "0.1"

[features]
default = ["regex"]
